Fix list nav white space

--- a/assets/scss/page/_list.scss
+++ b/assets/scss/page/_list.scss
@@ -11,8 +11,8 @@
   .nav {
     display: flex;
     justify-content: center;
-    padding-top: 4rem;
-    padding-bottom: 5rem;
+    flex-wrap: wrap;
+    padding: 4rem 2rem 5rem;
     font-family: $serif;
 
     a {
@@ -39,8 +39,8 @@
       }
     }
 
-    li + li {
-      margin-left: 20px;
+    li {
+      margin: 0.3rem 1rem;
     }
   }
 }
